log
Sat, Mar 22, 2025 12:16:22 PM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Sat, Mar 22, 2025  1:09:37 PM: 
 exercises.c | 34 ++++++++++++++++++++++++++++++++++
 1 file changed, 34 insertions(+)
In file included from test.c:5:
exercises.c: In function 'crea_lista':
exercises.c:46:6: error: assignment to 'List *' from incompatible pointer type 'int *' [-Wincompatible-pointer-types]
   46 |    L = (int*) malloc (sizeof(10)) ;
      |      ^
exercises.c:49:19: error: initialization of 'int *' from 'int' makes pointer from integer without a cast [-Wint-conversion]
   49 |       int *dato = i ;
      |                   ^
exercises.c: In function 'eliminaElementos':
exercises.c:82:22: error: invalid use of incomplete typedef 'List'
   82 |    if (L == NULL || L->size == 0) return;
      |                      ^~
Compilation failed
06f26b9
Sat, Mar 22, 2025  1:59:24 PM: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function 'eliminaElementos':
exercises.c:81:22: error: invalid use of incomplete typedef 'List'
   81 |    if (L == NULL || L->size == 0) return;
      |                      ^~
Compilation failed
416f43f
Sat, Mar 22, 2025  2:02:08 PM: 
 exercises.c | 8 --------
 1 file changed, 8 deletions(-)
 tests:  3|2
total_score: 30/70
04bc726
Sat, Mar 22, 2025  2:25:39 PM: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  4|1
total_score: 50/70
80b020f
